# jyotishganit-mcp

./: .gitignore  Makefile  README.md  pyproject.toml
.cursor/rules/: project-overview.mdc  python-conventions.mdc
.github/workflows/: ci.yml
scripts/: register_mcp_cursor.py
src/jyotishganit_mcp/: __init__.py  __main__.py  _patch_skyfield.py  chart_cache.py  server.py
tests/: __init__.py  test_chart_cache.py  test_server.py  test_tools.py
