[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jyotishganit-mcp"
version = "0.1.0"
description = "MCP server for jyotishganit Vedic astrology calculations"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "mcp>=1.0",
    "jyotishganit @ git+https://github.com/adeshmukh/jyotishganit.git@main",
]

[project.scripts]
jyotishganit-mcp = "jyotishganit_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/jyotishganit_mcp"]

[tool.hatch.build.targets.sdist]
include = ["src/jyotishganit_mcp"]

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
